fix spacing, changed the favicon and title

--- a/src/Event.css
+++ b/src/Event.css
@@ -1,6 +1,6 @@
 .list-item {
     height: 14vh;
-    margin: 17px 15%;
+    margin: 17px 10%;
     border-radius: 15px;
     display: flex;
     justify-content: space-evenly;
@@ -15,4 +15,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 1rem;
 }
